[gd_scene load_steps=8 format=3 uid="uid://b6i20dv12wlg6"]

[ext_resource type="Script" path="res://scripts/NodeOlla.gd" id="1_4i4kx"]
[ext_resource type="Texture2D" path="res://sprites/frutas/spriteOlla.png" id="2_qh4ab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5atk"]
size = Vector2(75.5, 20)

[sub_resource type="Animation" id="Animation_wn3yp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteOlla:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_eqtnv"]
resource_name = "cocinando"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteOlla:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_4fjpd"]
resource_name = "sin_cocinar"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteOlla:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gcoao"]
_data = {
"RESET": SubResource("Animation_wn3yp"),
"cocinando": SubResource("Animation_eqtnv"),
"sin_cocinar": SubResource("Animation_4fjpd")
}

[node name="NodeOlla" type="Node2D"]
script = ExtResource("1_4i4kx")
metadata/_edit_lock_ = true

[node name="SpriteOlla" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_qh4ab")
hframes = 4
vframes = 2
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="SpriteOlla"]
collision_layer = 0
collision_mask = 2
monitorable = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteOlla/Area2D"]
position = Vector2(68, 2)
shape = SubResource("RectangleShape2D_d5atk")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=["olla_animation"]]
libraries = {
"": SubResource("AnimationLibrary_gcoao")
}
speed_scale = 2.0

[node name="Giro" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="SpriteOlla/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="SpriteOlla/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Giro" to="." method="_on_giro_timeout"]
